--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors Game</title>
+    <link rel="stylesheet" href="./styles.css">
     <script src="./script.js"></script>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>ROCK PAPER SCISSORS</h1>
+        <div class="imgContainer">
+            <img id="rock" src="./images/rock.png" alt="Rock">
+            <img id="paper" src="./images/paper.png" alt="Paper">
+            <img id="scissors" src="./images/scissors.png" alt="">
+        </div>
+        <div class="textContainer">
+            <h3>Player score: <span id="player"></span></h3>
+            <h3>Computer score: <span id="computer"></span></h3>
+        </div>
+        <h3 id="winnerText"></h3>
+    </div>
 </body>
 </html>
