--- a/index.html
+++ b/index.html
@@ -6,21 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors Game</title>
     <link rel="stylesheet" href="./styles.css">
-    <script src="./script.js"></script>
 </head>
 <body>
     <div class="container">
         <h1>ROCK PAPER SCISSORS</h1>
         <div class="imgContainer">
-            <img id="rock" src="./images/rock.png" alt="Rock">
-            <img id="paper" src="./images/paper.png" alt="Paper">
-            <img id="scissors" src="./images/scissors.png" alt="">
+            <button id="rock">✊</button>
+            <button id="paper">✋</button>
+            <button id="scissors">✌️</button>
         </div>
         <div class="textContainer">
-            <h3>Player score: <span id="player"></span></h3>
-            <h3>Computer score: <span id="computer"></span></h3>
+            <h3 id="playerText">
+                Player score: 
+                <span id="player">
+                </span>
+            </h3>
+            <h3 id="computerText">
+                Computer score: 
+                <span id="computer">
+                </span>
+            </h3>
         </div>
-        <h3 id="winnerText"></h3>
+        <h3 id="winnerText">asdsa</h3>
+        <button id="playAgain" class="hide">PLAY AGAIN</button>
     </div>
+    <script src="./script.js"></script>
 </body>
 </html>
