Finish ui and also functionality

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </span>
             </h3>
         </div>
-        <h3 id="winnerText">asdsa</h3>
+        <h3 id="winnerText"></h3>
         <button id="playAgain" class="hide">PLAY AGAIN</button>
     </div>
     <script src="./script.js"></script>
